# classpoly

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  README.txt  bitmap.h  class_inv.h  classpoly.h  classpoly_program.c  compute_classpoly.c  crt.c  ecurve.h  evec.c  evec.h  iqclass.c  iqclass.h  makefile  mpzutil.c  mpzutil.h  phi_poly.h  prime.c  prime.h  primes.c  primes.h  qform.c  table.h
.github/workflows/: ci.yml
ff_poly_v2.0.0/: CMakeLists.txt  asm.h  cstd.h  ff.c  ff.h  ff2k.c  ff2k.h  ff_poly.h  ffext.c  ffext.h  fff.h  ffmontgomery64.h  ffpoly.c  ffpoly.h  ffpolyalloc.c  ffpolyalloc.h  ffpolybig.c  ffpolybig.h  ffpolyfromroots.c  ffpolyfromroots.h  ffpolymultipoint.c  ffpolymultipoint.h  ffpolysmall.c  ffpolysmall.h  fp.h  mem.c  mm.c  mm.h  ntutil.h  polyparse.c  polyparse.h
ff_poly_v2.0.0/zn_poly/: array.c  ks_support.c  misc.c  mpn_mulmid.c  mul.c  mul_fft.c  mul_ks.c  mulmid.c  mulmid_ks.c  nuss.c  pack.c  pmf.c  pmfvec_fft.c  tuning.c  wide_arith.h  zn_mod.c  zn_poly.h  zn_poly_internal.h
src/: bigX1.h  bipoly.c  bipoly.h  bitmap.h  class_inv.c  class_inv.h  classpoly.c  classpoly.h  classpoly_crt.c  classpoly_crt.h  classpoly_inv.c  classpoly_inv.h  classpoly_program.c  compute_classpoly.c  compute_classpoly_parallel.c  crt.c  crt.h  cstd.c  cstd.h  ecurve.c  ecurve.h  ecurve_ladic.c  evec.c  evec.h  findcurve.c  findcurve.h  iqclass.c  iqclass.h  mpzutil.c  mpzutil.h  ntutil.c  ntutil.h  phi_eval.c  phi_eval.h  phi_fj_strings.h  phi_gcd.c  phi_gcd.h  phi_poly.c  phi_poly.h  pickprimes.c  (+17 more)
tests/: test_classpoly.c
tests/data/: D14141835_p57896044618658097711785492504343953926543511531128800564411133339292026663159.coeffs  D14141835_p57896044618658097711785492504343953926634992332820282019728792003956564819949.coeffs  D167995_p57896044618658097711785492504343953926348427374841791341041551676248176146099.coeffs  D167995_p57896044618658097711785492504343953926634992332820282019728792003956564819949.coeffs  D4059339_p57896044618658097711785492504343953926452459951711404613951846209448911595739.coeffs  D4059339_p57896044618658097711785492504343953926634992332820282019728792003956564819949.coeffs  D54558307_p57896044618658097711785492504343953926342357520481333358459613131403471893763.coeffs  D54558307_p57896044618658097711785492504343953926634992332820282019728792003956564819949.coeffs  D64752003_p57896044618658097711785492504343953926483949935030029656422428983527059104287.coeffs  D64752003_p57896044618658097711785492504343953926634992332820282019728792003956564819949.coeffs  D7857907_p57896044618658097711785492504343953926549254372227246365156541811699034343327.coeffs  D7857907_p57896044618658097711785492504343953926634992332820282019728792003956564819949.coeffs  D92169307_p57896044618658097711785492504343953926544611479355037105499359504869493802389.coeffs  D92169307_p57896044618658097711785492504343953926634992332820282019728792003956564819949.coeffs
